<resources>
    <string name="app_name">Calculator</string>
    <string name="key_c">C</string>
    <string name="key_backspace">\u232b</string>
    <string name="key_split">/</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_multiply">x</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_plus">+</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_equal">=</string>
    <string name="key_plus_minus">+/-</string>
    <string name="day_theme">Светлая тема</string>
    <string name="night_theme">Ночная тема</string>
    <string name="btn_back">Назад</string>
    <string name="action_settings">Выбор темы</string>
    <string name="mint_theme">Мятная тема</string>
</resources>