<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mrg_five"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textView"
                android:enabled="false"
                android:fontFamily="@font/calculator"
                android:gravity="right"
                android:textColor="@color/txt_edit"
                android:textSize="@dimen/txt_size_two"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mrg_five"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/calculator"
                android:gravity="right"
                android:textColor="@color/txt_view"
                android:textSize="@dimen/txt_size_three"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/mrg_five"
            android:layout_weight="0.5">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:columnCount="4"
                android:textStyle="bold">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyC"
                    android:text="@string/key_c"
                    android:textColor="@color/red"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyBackSpace"
                    android:text="@string/key_backspace"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyPlusMinus"
                    android:text="@string/key_plus_minus"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keySplit"
                    android:text="@string/key_split"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keySeven"
                    android:text="@string/key_7"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyEight"
                    android:text="@string/key_8"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyNine"
                    android:text="@string/key_9"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyMultiply"
                    android:text="@string/key_multiply"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyFour"
                    android:text="@string/key_4"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyFive"
                    android:text="@string/key_5"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keySix"
                    android:text="@string/key_6"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyMinus"
                    android:text="@string/key_minus"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyOne"
                    android:text="@string/key_1"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyTwo"
                    android:text="@string/key_2"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyThree"
                    android:text="@string/key_3"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyPlus"
                    android:text="@string/key_plus"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyZero"
                    android:layout_columnSpan="2"
                    android:text="@string/key_0"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyDot"
                    android:text="@string/key_dot"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keyEqual"
                    android:text="@string/key_equal"
                    android:layout_columnWeight="1"
                    android:layout_marginRight="@dimen/mrg_five"/>


            </GridLayout>

        </LinearLayout>

    </LinearLayout>
</layout>